--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -73,4 +73,35 @@
   body {
     @apply bg-background text-foreground;
   }
+  html {
+    font-family: 'Noto Sans KR', system-ui, sans-serif;
+  }
+}
+
+@layer components {
+  .h-stack {
+    display: flex;
+  }
+
+  .v-stack {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .hide-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+
+  .two-line-ellipsis {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+  }
 }
